# duckdb-project

./: README.md  main.py  pyproject.toml
src/cloud/: cloud_connection.py
src/controllers/: controller.py
src/data/temp_data/: candy_factories.parquet  candy_products.parquet  candy_sales.parquet  candy_targets.parquet  uszips.parquet
src/data_source/: csv_data_source.py
